--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
     ],
     "require": {
         "php": ">=5.4.0",
+        "illuminate/contracts": "~5.0",
         "codezero/curl": "1.*"
     },
     "require-dev": {
