Require phpFastCache package

--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
   "require": {
     "php": ">=5.4.0",
     "illuminate/contracts": "~5.0",
-    "codezero/curl": "1.*"
+    "codezero/curl": "1.*",
+    "phpfastcache/phpfastcache": "dev-final"
   },
   "require-dev": {
     "phpspec/phpspec": "~2.0"
